--- a/views/credentials/login.ejs
+++ b/views/credentials/login.ejs
@@ -35,13 +35,14 @@
               <h5 class="card-title fw-semibold mb-4">Forms</h5>
               <div class="card">
                 <div class="card-body">
-                  <form>
+                  <form action="./login" method="post">
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label"
                         >Email address</label
                       >
                       <input
                         type="email"
+                        name="email"
                         class="form-control"
                         id="exampleInputEmail1"
                         aria-describedby="emailHelp"
@@ -56,6 +57,7 @@
                       >
                       <input
                         type="password"
+                        name="password"
                         class="form-control"
                         id="exampleInputPassword1"
                       />
