--- a/views/clinics/includes/sidebar.ejs
+++ b/views/clinics/includes/sidebar.ejs
@@ -7,27 +7,27 @@
         <li class="menu-title" data-key="t-menu">Overview</li>
 
         <li>
-          <a href="index.html">
+          <a href="/clinics/dashboard">
             <i data-feather="home"></i>
             <span data-key="t-dashboard">Dashboard</span>
           </a>
         </li>
 
         <li>
-          <a href="./patients">
+          <a href="/clinics/patients">
             <i data-feather="layout"></i>
             <span data-key="t-horizontal">Patients</span>
           </a>
         </li>
 
         <li>
-          <a href="/visits">
+          <a href="/clinics/visits">
             <i data-feather="layout"></i>
-            <span data-key="t-horizontal">Visits</span>
+            <span data-key="t-horizontal">Visits </span>
           </a>
         </li>
         <li>
-          <a href="/appointments">
+          <a href="/clinics/appointments">
             <i data-feather="layout"></i>
             <span data-key="t-horizontal">Appointments</span>
           </a>
@@ -35,19 +35,19 @@
 
         <li class="menu-title mt-2" data-key="t-components">Administration</li>
         <li>
-          <a href="/branches">
+          <a href="/clinics/branches">
             <i data-feather="layout"></i>
             <span data-key="t-horizontal">Branches</span>
           </a>
         </li>
         <li>
-          <a href="/branches">
+          <a href="/clinics/branches">
             <i data-feather="layout"></i>
             <span data-key="t-horizontal">Payments</span>
           </a>
         </li>
         <li>
-          <a href="/branches">
+          <a href="/clinics/branches">
             <i data-feather="layout"></i>
             <span data-key="t-horizontal">Statistics</span>
           </a>
@@ -55,19 +55,19 @@
 
         <li class="menu-title mt-2" data-key="t-components">Help & Settings</li>
         <li>
-          <a href="/help-center">
+          <a href="/clinics/help-center">
             <i data-feather="layout"></i>
             <span data-key="t-horizontal">Help Center</span>
           </a>
         </li>
         <li>
-          <a href="/settings">
+          <a href="/clinics/settings">
             <i data-feather="layout"></i>
             <span data-key="t-horizontal">Settings</span>
           </a>
         </li>
         <li>
-          <a href="/report">
+          <a href="/clinics/report">
             <i data-feather="layout"></i>
             <span data-key="t-horizontal">Report</span>
           </a>
